	* Experimental support for coroutines. Use CO_RETURN (or LR_CO_RETURN)
	  for a member function that has a coroutine return type. Use CO_THROW
	  (or LR_CO_THROW) to throw from a coroutine.

	  The experimental support must be explicitly enabled with

	    #define TROMPELOEIL_EXPERIMENTAL_COROUTINES
	    #include <trompeloeil.hpp>

	  There is currently no support for co_yield.

	* The self test program "custom_recursive_mutex" now says that it's
	  succeeded. Thank you @yurivict for reporting the confusion.

	* Self test programs are only build when explicitly setting
	  -DTROMPELOEIL_BUILD_TESTS=yes to the CMake command line.

	* The self test programs require a higher version of CMake (3.19 currently)

v45 2023-07-21

	* Support matching regular expressions to std::string view

	* Added adapter for QA Systems Cantata. Thank you Andreas Schätti

v44 2023-04-10

	* Fixed issue 293: Wildcard _ could not match types that can be
	  constructed from any type. This fix unfortunately turns off conversion
	  warnings for REQUIRE_CALL and friends when building with gcc. Thank
	  you @TimonNoethlichs for reporting.

	* Fixed issue 296: Improved sequence violation message when ALLOW_CALL
	  is involved. Thank you Sigurður Sveinn Halldórsson for reporting.

	* Fixed -Wunsafe-buffer-usage warning from clang-16

	* static_assert() when trying to get a runtime value from any matcher

	* Bumped required CMake version to 3.14 or later. Thank you Luke Dennis
	  for reporting.

v43 2022-10-26

	* Added static_assert to duck_typed_matcher's templatized conversion
	  function explaining why it should never be instantiated. Issue 270.

	* Added gcc-12 and clang++-15 to the CI build matrix

	* Fixed issue 272: Support Catch2 piecemeal headers.

	* Fix issue #279 where the doctest adapter showed violation messages
	  as hex addresses for most recent releases of doctest. Thanks
	  @SimonKagstrom for reporting.

	* Fixed an obscure bug where an expectation could match with a sequence